Add Sonar/Jacoco and apply code cleanup
Configure SonarCloud and JaCoCo in build.gradle (Jacoco toolVersion, jacocoTestReport, sonar properties and tasks.sonar dependency on coverage report). Replace Stream.collect(Collectors.toList()) calls with Stream.toList() and remove unused imports/fields across repository adapters and services. Introduce a shared log message constant for missing employees, simplify DataLoader by removing its logger and streamlining exception handling, and add Thymeleaf namespace to docs.html. These changes modernize streams, add CI-quality tooling, and tidy up unused code.